Tests in CI (#153)
* move assetdb and sessiondb tests under integration feature flag

* run rust tests in CI

* fix dobi configs for rust deploy images

* run python unit tests in builds

* run tests in js builds

* fix js tests

* WIP tests run but they fail

* WIP

* python integration tests pass!

* make rust integration tests run

* make rust integration tests work and wire tests into github workflows

* workflow improvements

* use cached build artifacts in integration tests

* remove bogus hypothesis examples

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -85,6 +85,9 @@ jobs:
           GRAPL_RELEASE_TARGET=release TAG="$VERSION-$CHANNEL" ./dobi-linux --no-bind-mount js
           GRAPL_RELEASE_TARGET=release TAG="$VERSION-$CHANNEL" ./dobi-linux --no-bind-mount clean-js-build
           docker system prune -f
+          GRAPL_RELEASE_TARGET=release TAG="$VERSION-CHANNEL" ./dobi-linux --no-bind-mount integration
+          GRAPL_RELEASE_TARGET=release TAG="$VERSION-CHANNEL" ./dobi-linux --no-bind-mount clean-build
+          docker system prune -f
 
       - name: Log in to Docker registry
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
