--- a/dobi.yaml
+++ b/dobi.yaml
@@ -31,6 +31,8 @@ image=analyzer-dispatcher:
   image: grapl/grapl-analyzer-dispatcher
   context: src/rust/analyzer-dispatcher
   dockerfile: Dockerfile
+  args:
+    release_target: "{env.GRAPL_RELEASE_TARGET:debug}"
   target: grapl-analyzer-dispatcher
   tags:
     - "{env.TAG}"
@@ -41,6 +43,8 @@ image=generic-subgraph-generator:
   image: grapl/grapl-generic-subgraph-generator
   context: src/rust/generic-subgraph-generator
   dockerfile: Dockerfile
+  args:
+    release_target: "{env.GRAPL_RELEASE_TARGET:debug}"
   target: grapl-generic-subgraph-generator
   tags:
     - "{env.TAG}"
@@ -51,6 +55,8 @@ image=graph-merger:
   image: grapl/grapl-graph-merger
   context: src/rust/graph-merger
   dockerfile: Dockerfile
+  args:
+    release_target: "{env.GRAPL_RELEASE_TARGET:debug}"
   target: grapl-graph-merger
   tags:
     - "{env.TAG}"
@@ -61,6 +67,8 @@ image=node-identifier:
   image: grapl/grapl-node-identifier
   context: src/rust/node-identifier
   dockerfile: Dockerfile
+  args:
+    release_target: "{env.GRAPL_RELEASE_TARGET:debug}"
   target: grapl-node-identifier
   tags:
     - "{env.TAG}"
@@ -71,6 +79,8 @@ image=node-identifier-retry-handler:
   image: grapl/grapl-node-identifier-retry-handler
   context: src/rust/node-identifier
   dockerfile: Dockerfile
+  args:
+    release_target: "{env.GRAPL_RELEASE_TARGET:debug}"
   target: grapl-node-identifier-retry-handler
   tags:
     - "{env.TAG}"
@@ -81,6 +91,8 @@ image=sysmon-subgraph-generator:
   image: grapl/grapl-sysmon-subgraph-generator
   context: src/rust/sysmon-subgraph-generator
   dockerfile: Dockerfile
+  args:
+    release_target: "{env.GRAPL_RELEASE_TARGET:debug}"
   target: grapl-sysmon-subgraph-generator
   tags:
     - "{env.TAG}"
@@ -288,6 +300,39 @@ image=graphql-endpoint:
     - "{env.TAG}"
 
 #
+# compose
+#
+# This is where hook into the docker-compose environment for running
+# integration tests. It should be identical to local Grapl. The most
+# important thing here is to keep the 'depends' list up to date.
+#
+
+compose=integration-env:
+  files:
+    - docker-compose.yml
+  project: grapl-integration-tests
+  depends:
+    # rust images
+    - analyzer-dispatcher
+    - generic-subgraph-generator
+    - graph-merger
+    - node-identifier
+    - node-identifier-retry-handler
+    - sysmon-subgraph-generator
+    # python images
+    - analyzer-executor
+    - engagement-creator
+    - engagement-edge
+    - dgraph-ttl
+    - model-plugin-deployer
+    - grapl-notebook
+    - graph-provision
+    - dynamodb-provision
+    # js images
+    - engagement-view
+    - graphql-endpoint
+
+#
 # jobs -- these are where we build release artifacts
 #
 
@@ -300,7 +345,46 @@ job=build-rust:
   artifact:
     - ./dist/*
 
+job=run-node-identifier-integration-tests:
+  use: rust-build
+  net-mode: grapl-integration-tests_default
+  command: /bin/bash -c "sleep 30 && cargo test --target=x86_64-unknown-linux-musl --manifest-path node-identifier/Cargo.toml --features integration"
+  env:
+    - GRAPL_LOG_LEVEL=INFO
+    - RUST_LOG=INFO
+    - RUST_BACKTRACE=1
+    - "BUCKET_PREFIX=local-grapl"
+    - "IS_LOCAL=True"
+    - "MG_ALPHAS=grapl-master-graph-db:9080"
+    - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-retry-queue"
+    - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue"
+    - STATIC_MAPPING_TABLE=local-grapl-static_mapping_table
+    - DYNAMIC_SESSION_TABLE=local-grapl-dynamic_session_table
+    - PROCESS_HISTORY_TABLE=local-grapl-process_history_table
+    - FILE_HISTORY_TABLE=local-grapl-file_history_table
+    - INBOUND_CONNECTION_HISTORY_TABLE=local-grapl-inbound_connection_history_table
+    - OUTBOUND_CONNECTION_HISTORY_TABLE=local-grapl-outbound_connection_history_table
+    - NETWORK_CONNECTION_HISTORY_TABLE=local-grapl-network_connection_history_table
+    - IP_CONNECTION_HISTORY_TABLE=local-grapl-ip_connection_history_table
+    - ASSET_ID_MAPPINGS=local-grapl-asset_id_mappings
+  depends:
+    - rust-build
+    - integration-env
+
 # python jobs
+
+job=run-grapl-analyzerlib-integration-tests:
+  use: grapl-analyzerlib-build
+  net-mode: grapl-integration-tests_default
+  command: /bin/bash -c "sleep 30 && source venv/bin/activate && cd grapl_analyzerlib && py.test -n auto -m 'integration_test'"
+  env:
+    - GRAPL_LOG_LEVEL=INFO
+    - "BUCKET_PREFIX=local-grapl"
+    - "IS_LOCAL=True"
+    - "MG_ALPHAS=grapl-master-graph-db:9080"
+  depends:
+    - grapl-analyzerlib-build
+    - integration-env
 
 job=build-analyzer-executor:
   use: analyzer-executor-build
@@ -346,6 +430,8 @@ job=build-graphql-endpoint:
   artifact:
     - ./dist/grapl-graphql-endpoint/lambda.zip
 
+# TODO: graphql endpoint integration tests
+
 #
 # aliases
 #
@@ -367,6 +453,12 @@ alias=clean-rust-build:
     - "rust-build:rm"
   annotations:
     description: "Delete the rust build image"
+
+alias=rust-integration:
+  tasks:
+    - run-node-identifier-integration-tests
+  annotations:
+    description: "Run the rust integration tests"
 
 alias=python:
   tasks:
@@ -399,6 +491,12 @@ alias=clean-python-build:
   annotations:
     description: "Delete the python build images"
 
+alias=python-integration:
+  tasks:
+    - run-grapl-analyzerlib-integration-tests
+  annotations:
+    description: "Run the python integration tests"
+
 alias=js:
   tasks:
     - build-graphql-endpoint
@@ -412,6 +510,8 @@ alias=clean-js-build:
     - "graphql-endpoint-build:rm"
   annotations:
     description: "Delete the js build images"
+
+# TODO: js integration tests
 
 alias=build:
   tasks:
@@ -428,3 +528,11 @@ alias=clean-build:
     - clean-js-build
   annotations:
     description: "Delete all the build images"
+
+alias=integration:
+  tasks:
+    - rust-integration
+    - python-integration
+    # TODO: js integration tests
+  annotations:
+    description: "Run all the integration tests"
