--- a/dobi.yaml
+++ b/dobi.yaml
@@ -412,7 +412,7 @@ job=build-dgraph-ttl:
   mounts:
     - dist
   artifact:
-    - ./dist/grapl-dgraph-ttl/lambda.zip
+    - ./dist/dgraph-ttl/lambda.zip
 
 job=build-model-plugin-deployer:
   use: model-plugin-deployer-build
@@ -428,7 +428,7 @@ job=build-graphql-endpoint:
   mounts:
     - dist
   artifact:
-    - ./dist/grapl-graphql-endpoint/lambda.zip
+    - ./dist/graphql-endpoint/lambda.zip
 
 # TODO: graphql endpoint integration tests
 
