another release workflow fix

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -283,7 +283,7 @@ jobs:
       - name: Upload dgraph-ttl to Github
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ github.event.release.upload_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./${{ steps.extract-artifacts.outputs.graphql-endpoint }}
