--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:alpine3.10 AS engagement-view-build
+RUN apk add bash
 WORKDIR /grapl
 COPY . .
 RUN yarn install
-RUN CI=true yarn test
 RUN yarn build
 
 FROM syntaqx/serve AS grapl-engagement-view
