--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -8,7 +8,7 @@ on:
       - master
 
 jobs:
-  grapl-cargo-audit:
+  cargo-audit:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
           docker build -f .github/etc/cargo-audit/Dockerfile -t grapl/grapl-cargo-audit:latest src/rust
           docker run -t grapl/grapl-cargo-audit:latest cargo audit
 
-  grapl-rust-build:
+  rust-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,15 +30,15 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Build Grapl Rust services
+      - name: Build Rust services
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust
 
-      - name: Grapl Rust unit tests
+      - name: Rust unit tests
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust-unit-tests
 
-  grapl-python-build:
+  python-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -49,15 +49,15 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Build Grapl Python services
+      - name: Build Python services
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python
 
-      - name: Grapl Python unit tests
+      - name: Python unit tests
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-unit-tests
 
-  grapl-js-build:
+  js-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -68,17 +68,16 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Build Grapl JS services
+      - name: Build JS services
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js
 
-      - name: Grapl JS unit tests
+      - name: JS unit tests
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js-unit-tests
 
-  grapl-rust-integration-tests:
+  integration-tests:
     runs-on: ubuntu-latest
-    needs: [grapl-rust-build, grapl-python-build, grapl-js-build]
 
     steps:
       - uses: actions/checkout@v2
@@ -88,26 +87,6 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Run Grapl integration tests
+      - name: Run integration tests
         run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust-integration
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount clean-rust-build
-          docker system prune -f
-
-  grapl-python-integration-tests:
-    runs-on: ubuntu-latest
-    needs: [grapl-rust-build, grapl-python-build, grapl-js-build]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install dobi
-        run: |
-          wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
-          chmod +x dobi-linux
-
-      - name: Run Grapl integration tests
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-integration
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount clean-python-build
-          docker system prune -f
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount integration-tests
