--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Clean up
         run: |
-          rm rust-src-img.tar.gz
+          rm rust-src-build.tar.gz
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount clean-rust-build
 
   rust-unit-tests:
