--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -21,7 +21,6 @@ jobs:
 
   rust-unit-tests:
     runs-on: ubuntu-latest
-    needs: [upload-rust-build]
 
     steps:
       - uses: actions/checkout@v2
@@ -97,6 +96,10 @@ jobs:
         run: |
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
+
+      - name: Build Grapl
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
 
       - name: Run integration tests
         run: |
